test/fail/functionwrongreturn.app
// The return statement in function f should have type String

application test

section functions

globals {
  function f(i : Int) : String {
    return i * i;
  }
}
